--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,9 +2,9 @@
 spring:
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    username: root
-    password: green502
-    url: jdbc:mariadb://192.168.0.144:3306/team_a
+    username: ${DB_USERNAME}
+    password: ${DB_USERPASSWORD}
+    url: jdbc:mariadb://${DB_HOST}:3306/team_a
 
 mybatis:
   type-aliases-package: com.green.nottodolist
